--- a/blog-stage-b1.html
+++ b/blog-stage-b1.html
@@ -55,8 +55,8 @@
         <div class="container">
             <div class="row no-gutters slider-text align-items-end justify-content-center">
                 <div class="col-md-9 pt-5 text-center">
-                    <p class="breadcrumbs"><span class="me-2"><a href="index.html">Accueil <i class="fa fa-chevron-right"></i></a></span> <span class="me-2"><a href="blog.html">Blog <i class="fa fa-chevron-right"></i></a></span> <span>Blog Single <i class="fa fa-chevron-right"></i></span></p>
-                    <h1 class="mb-0 bread">Blog Details</h1>
+                    <p class="breadcrumbs"><span class="me-2"><a href="index.html">Accueil <i class="fa fa-chevron-right"></i></a></span> <span class="me-2"><a href="blog.html">Blog <i class="fa fa-chevron-right"></i></a></span> <span>Bachelor 1 : mon expérience professionnelle<i class="fa fa-chevron-right"></i></span></p>
+                    <h1 class="mb-0 bread">Bilan de mon stage professionnel <br>de Bachelor 1</h1>
                 </div>
             </div>
         </div>
@@ -66,43 +66,87 @@
         <div class="container">
             <div class="row g-lg-5">
                 <div class="col-lg-8 blog-single">
-                    <h2 class="mb-3">#1. Bootstrap 5</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, eius mollitia suscipit, quisquam doloremque distinctio perferendis et doloribus unde architecto optio laboriosam porro adipisci sapiente officiis nemo accusamus
-                        ad praesentium? Esse minima nisi et. Dolore perferendis, enim praesentium omnis, iste doloremque quia officia optio deserunt molestiae voluptates soluta architecto tempora.</p>
                     <p>
-                        <img src="images/bg_1.jpg" alt="" class="img-fluid">
+                        <img src="images/villa_gallici_2.jpg" alt="" class="img-fluid">
                     </p>
-                    <p>Molestiae cupiditate inventore animi, maxime sapiente optio, illo est nemo veritatis repellat sunt doloribus nesciunt! Minima laborum magni reiciendis qui voluptate quisquam voluptatem soluta illo eum ullam incidunt rem assumenda eveniet
-                        eaque sequi deleniti tenetur dolore amet fugit perspiciatis ipsa, odit. Nesciunt dolor minima esse vero ut ea, repudiandae suscipit!</p>
 
-                    <pre><code class="language-css">
-        body {
-            font: 100% Helvetica, sans-serif;
-            color: #333;
-        }
-            
-        .box {
-            -webkit-border-radius: 10px;
-            -moz-border-radius: 10px;
-            -ms-border-radius: 10px;
-            border-radius: 10px;
-        }
-                    </code></pre>
+                    <p>Depuis bientôt trois ans, j'ai la chance de travailler en tant que réceptionniste au sein de la Villa Gallici, hôtel 5 étoiles du groupe Relais & Châteaux, niché au coeur du centre-ville d'Aix-en-Provence.</p>
+                    <p>C'est au sein de cet établissement prestigieux que j'ai choisi d'effectuer mon stage de professionnalisation de première année de bachelor.</p>
 
-                    <h2 class="mb-3 mt-5">#2. Creative WordPress Themes</h2>
-                    <p>Temporibus ad error suscipit exercitationem hic molestiae totam obcaecati rerum, eius aut, in. Exercitationem atque quidem tempora maiores ex architecto voluptatum aut officia doloremque. Error dolore voluptas, omnis molestias odio
-                        dignissimos culpa ex earum nisi consequatur quos odit quasi repellat qui officiis reiciendis incidunt hic non? Debitis commodi aut, adipisci.</p>
+                    <h2 class="mb-3">Une adresse confidentielle</h2>
+
+                    <p>Bordée d'un grand jardin à la française, la Villa Gallici est une superbe bâtisse du XVIIIème siècle. C'est, pour moi, un petit bijou au coeur d'Aix-en-Provence, une adresse confidentielle que l'on s'échange comme un secret... A peine
+                        les portes franchies, un décor de scène antique, lumineux et verdoyant accueille les visiteurs. Avec ses vingt-trois chambres luxueuses, ses petits salon intimistes, sa belle piscine et son service cinq étoiles, cet hôtel d'exception
+                        aux reflets baroques atteint le summum du romantisme. C'est dans ce cadre enchanteur que j'ai le privilège de venir travailler chaque semaine.</p>
+
+
+                    <h2 class="mb-3 mt-5">Un petit palais florentin</h2>
+                    <p>L'histoire de la Villa Gallici commence il y a une vingtaine d'années, lorsque trois amis esthètes transforment une demeure aixoise de caractère en un petit palazzo florentin. Ils créent un hôtel de charme au nom et à la culture antique.
+                        Sous les platanes et les cyprès centenaires, sur les terrasses fleuries gardées par des déesses de pierre, l'esprit se veut provençal et toscan.</p>
+
+                    <p>La clientèle de la Villa est internationale. L'hôtel accueille aussi des bien des clients nord-américains qu'européens et asiatiques. L'hôtel a tissé de nombreux partenariats auprès d'agences de voyage, mais également de grandes marques
+                        de luxe du secteur cosmétique ou de la maroquinerie.</p>
+
                     <p>
-                        <img src="images/image_3.jpg" alt="" class="img-fluid">
+                        <img src="images/villa_gallici_1.jpg" alt="" class="img-fluid">
                     </p>
-                    <p>Quisquam esse aliquam fuga distinctio, quidem delectus veritatis reiciendis. Nihil explicabo quod, est eos ipsum. Unde aut non tenetur tempore, nisi culpa voluptate maiores officiis quis vel ab consectetur suscipit veritatis nulla
-                        quos quia aspernatur perferendis, libero sint. Error, velit, porro. Deserunt minus, quibusdam iste enim veniam, modi rem maiores.</p>
+
+                    <h2 class="mb-3">Mes missions</h2>
+
+                    <p>La réception est le coeur et la vitrine de l'hôtel. En tant que réceptionniste, je suis chargé d'accueillir et de renseigner la clientèle lorsque je suis au front-office. Je leur remet leur clef et leur fait visiter la chambre à l'arrivée,
+                        et m'occupe également de prendre note de toute demande supplémentaire qu'ils pourraient avoir (réservation de billets de spectacle, appel d'un taxi, réservation d'une table au restaurant, commande d'un repas en chambre, etc.)</p>
+
+                    <p>Dans le back-office, mes tâches deviennent plus administratives. Je réponds au téléphone, <strong>aussi bien en français qu'en anglais</strong>, et me charge de réaliser des réservations pour les clients qui le souhaient. En fin de
+                        journée, je compte les tickets de carte bleue sortis et m'assure qu'ils correspondent bien au total figurant sur le ticket de télécollecte sorti par le lecteur de carte. En cas de tickets manquants, je parcours la liste des encaissements
+                        réalisés dans le logiciel Vega et m'assure que l'opération en question y figure bien, avant de transmettre toutes ces informations au service comptabilité.</p>
+
+                    <p>Le service réception s'organise autour de la <strong>méthode agile</strong>. Des tâches à effectuer et des dates butoires sont inscrites sur des bloc-notes, et les employés présents s'occupent d'en réaliser un certain nombres chacun.</p>
+
+                    <p>Les réservations de l'hôtel sont gérées grâce au logiciel spécialisé Vega. Vega permet aux employés de la réception de bloquer des chambres, de consulter un planning prévisionnel ou encore de facturer diverses prestations supplémentaires
+                        aux clients. Vega nous donne également accès à des outils complets de comptabilité permettant de surveiller la balance condensée de l'entreprise ou encore les encaissements réalisés.</p>
+
+                    <h2 class="mb-3">Les difficultés</h2>
+
+                    <p>L'imprévu est la principale source de difficulté du métier, mais c'est également ce qui le rend si excitant. La bâtisse étant ancienne, il arrive que des dégâts des eaux ou des problèmes de canalisation surviennent, nous obligeant
+                        à reloger les clients dans une chambre différente, parfois au beau milieu de la nuit. Il faut alors agir rapidement, s'assurer qu'une nouvelle chambre aux prestations équivalentes est disponible, et contacter un réparateur au plus
+                        vite.
+                    </p>
+
+                    <p>Il arrive également que des clients, pourtant attendus, n'arrivent jamais à l'hôtel. Cette situation oblige la réception à leur facturer une partie de leur séjour puis à prendre contact avec eux concernant un remboursement partiel.</p>
+
+                    <p>De par le standing de l'hôtel, il nous arrive fréquemment d'accueillir des clients prestigieux aux exigences multiples. Ce type de clientèle nous oblige à rester <strong>disponibles à toute heure</strong> de la journée comme de la
+                        nuit et à adapter notre hôtel et nos services aux demandes spécifiques de chaque client. Menu, décoration, visites touristiques : toutes les demandes des clients doivent être prises en compte et satisfaites, par mes collègues et
+                        moi-même, dans la mesure du possible.</p>
+
+                    <p>Durant le mois de juin 2021, une <strong>attaque informatique</strong> a paralysé pendant plusieurs semaines notre logiciel de réservation, mais également les ordinateurs du service comptabilité responsable de la paie des employés.
+                        Toutes les équipes de l'hôtel ont ainsi dû faire preuve d'adaptabilité et de patience en remplissant plusieurs centaines de réservations à la main, sur papier, et en tâchant de solutionner eux-mêmes les problèmes de logiciel en
+                        attendant l'intervention d'une entreprise de cybersécurité.</p>
+
+                    <p>
+                        <img src="images/villa_gallici_3.webp" alt="" class="img-fluid">
+                    </p>
+
+                    <h2 class="mb-3">Conclusion</h2>
+
+                    <p>Mon expérience professionnelle au sein de la Villa Gallici a été bien plus qu'enrichissante : elle a été formatrice. J'y ai appris les compétences essentielles à chaque salarié du domaine privé : la responsabilité, la ponctualité,
+                        la communication entre employés, le travail en équipe, l'organisation du travail <i>agile</i>, la mise en application de savoirs-faire précis et, surtout, de savoirs-être.</p>
+
+                    <p>Grâce à cette expérience, je me sens désormais pleinement professionnel et apte à me montrer compétent et responsable au sein d'une entreprise. Je suis désormais impatient de multiplier les stages et les expériences professionnelles
+                        pour améliorer mes qualités de salarié et démontrer ma capacité toujours croissante à apporter une réelle valeur ajoutée aux entreprises qui m'accueilleront. </p>
+
+                    <p>J'aborde mes futurs entretiens d'embauche et mes premiers jours de stage avec beaucoup plus de sérénité, car je me sais désormais pleinement capable de mobiliser des compétences et des attitudes professionnelles, et de faire preuve
+                        d'adaptabilité et de savoir-être.</p>
+
+
+
+
+
+
+
+
                     <div class="tag-widget post-tag-container mb-5 mt-5">
                         <div class="tagcloud">
-                            <a href="#" class="tag-cloud-link">design</a>
-                            <a href="#" class="tag-cloud-link">CSS3</a>
-                            <a href="#" class="tag-cloud-link">HTML5</a>
-                            <a href="#" class="tag-cloud-link">bootstrap5</a>
+                            <a href="#" class="tag-cloud-link">stage</a>
                         </div>
                     </div>
 
