--- a/blog.html
+++ b/blog.html
@@ -63,6 +63,21 @@
         <div class="container-xl">
             <div class="row">
 
+                <!-- ARTICLE : Stage - Bachelor 1  -->
+                <div class="col-md-6 col-lg-3 d-flex">
+                    <div class="blog-entry justify-content-end" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+                        <a href="blog-stage-b1.html" class="block-20 img d-flex align-items-end" style="background-image: url('images/image_5.jpg');">
+                        </a>
+                        <div class="text">
+                            <p class="meta"> <span>13 août 2021</span>
+                                <span style="color:rgb(196, 170, 100)">Stage</span>
+                            </p>
+                            <h3 class="heading mb-3"><a href="blog-stage-b1.html">B1 : mon expérience professionnelle</a></h3>
+                            <p>Depuis trois ans, j'ai la chance de travailler en tant que réceptionniste au sein de la Villa Gallici, hôtel 5 étoiles au coeur d'Aix-en-Provence.</p>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- ARTICLE : Rem, Em, Px  -->
                 <div class="col-md-6 col-lg-3 d-flex">
                     <div class="blog-entry justify-content-end" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
@@ -72,7 +87,7 @@
                             <p class="meta"> <span>9 août 2021</span>
                                 <span style="color:rgb(196, 170, 100)">CSS</span>
                             </p>
-                            <h3 class="heading mb-3"><a href="blog-css-bases.html">CSS : rem, em ou px ?</a></h3>
+                            <h3 class="heading mb-3"><a href="blog-rem-em-px.html">CSS : rem, em ou px ?</a></h3>
                             <p>Présentation et particularités des différentes unités de mesure en CSS : les rem, les em et les pixels.</p>
                         </div>
                     </div>
@@ -87,7 +102,7 @@
                             <p class="meta"> <span>5 août 2021</span>
                                 <span style="color:rgb(196, 170, 100)">Tech</span>
                             </p>
-                            <h3 class="heading mb-3"><a href="blog-css-bases.html">Ada Lovelace, inventrice de la programmation</a></h3>
+                            <h3 class="heading mb-3"><a href="blog-ada-lovelace.html">Ada Lovelace, inventrice de la programmation</a></h3>
                             <p>Qui était Ada Lovelace, inventrice du premier programme informatique ?</p>
                         </div>
                     </div>
