--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,8 @@
                                         </div>
 
                                     </div>
-                                    <form id="contactForm" name="contactForm" class="contactForm">
+
+                                    <!-- <form id="contactForm" name="contactForm" class="contactForm">
                                         <div class="row">
                                             <div class="col-md-12">
                                                 <div class="form-group">
@@ -124,7 +125,8 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </form>
+                                    </form> -->
+
                                     <div class="w-100 social-media mt-5">
                                         <h3>Réseaux sociaux</h3>
                                         <p>
