--- a/services.html
+++ b/services.html
@@ -68,7 +68,7 @@
                         <div class="icon"><span class="flaticon-web-programming"></span></div>
                         <div class="text">
                             <h2>Développement web</h2>
-                            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                            <p>HTML, SCSS, JavaScript, PHP, Bootstrap.</p>
                         </div>
                     </div>
                 </div>
@@ -108,7 +108,7 @@
                         <div class="icon"><span class="flaticon-app-development"></span></div>
                         <div class="text">
                             <h2>Développement mobile</h2>
-                            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                            <p>Symfony.</p>
                         </div>
                     </div>
                 </div>
@@ -118,7 +118,7 @@
                         <div class="icon"><span class="flaticon-data"></span></div>
                         <div class="text">
                             <h2>Développement logiciel</h2>
-                            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                            <p>C#, C++, Java, Python, Golang.</p>
                         </div>
                     </div>
                 </div>
@@ -138,7 +138,7 @@
                         <div class="icon"><span class="flaticon-ux"></span></div>
                         <div class="text">
                             <h2>Infrastructure & Réseau</h2>
-                            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                            <p>Virtualisation, Cisco, Packet Tracer, cybersécurité.</p>
                         </div>
                     </div>
                 </div>
