--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
                 <div class="col-lg-6 d-flex align-items-end justify-content-end">
                     <div class="carousel-about">
                         <div class="item">
-                            <img src="images/jschmidt.png" class="img-fluid" alt="Colorlib">
+                            <!-- <img src="images/jschmidt.png" class="img-fluid" alt="Colorlib"> -->
                         </div>
                         <div class="item">
-                            <img src="images/jschmidt-2.png" class="img-fluid" alt="Colorlib">
+                            <!-- <img src="images/jschmidt-2.png" class="img-fluid" alt="Colorlib"> -->
                         </div>
                         </span>
                         <!-- <img src="images/jschmidt-2.png" class="img-fluid" alt="Colorlib"> -->
