--- a/work.html
+++ b/work.html
@@ -64,31 +64,34 @@
             <div class="row">
 
                 <div class="col-md-4">
-                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-1.jpg);">
+                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-b1-forum_fairfax2.jpg);">
                         <div class="overlay"></div>
                         <div class="text text-center p-4">
-                            <h3><a href="#">Branding &amp; Illustration Design</a></h3>
-                            <span>Web Design</span>
+                            <h3><a href="https://github.com/nicolas-lepinay/bachelor1-forum_Fairfax" target="_blank">Forum Fairfax</a></h3>
+                            <span>Bachelor 1</span>
+                            <br>
+                            <span>🥇 Lauréat du 1er prix</span>
+
                         </div>
                     </div>
                 </div>
 
                 <div class="col-md-4">
-                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-2.jpg);">
+                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-b1-groupie_tracker.jpg);">
                         <div class="overlay"></div>
                         <div class="text text-center p-4">
-                            <h3><a href="#">Branding &amp; Illustration Design</a></h3>
-                            <span>Web Design</span>
+                            <h3><a href="https://github.com/nicolas-lepinay/bachelor1-groupie_tracker" target="_blank">Groupie Tracker</a></h3>
+                            <span>Bachelor 1</span>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-md-4">
-                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-3.jpg);">
+                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-b1-clonernews.jpg);">
                         <div class="overlay"></div>
                         <div class="text text-center p-4">
-                            <h3><a href="#">Branding &amp; Illustration Design</a></h3>
-                            <span>Web Design</span>
+                            <h3><a href="https://nicolas-lepinay.github.io/bachelor1-clonernews/" target="_blank">Clonernews</a></h3>
+                            <span>Bachelor 1</span>
                         </div>
                     </div>
                 </div>
