--- a/blog-go-modules.html
+++ b/blog-go-modules.html
@@ -109,7 +109,7 @@
                     </div>
 
                     <div class="about-author d-flex p-4 bg-light rounded">
-                        <div class="bio me-md-4 img" style="background-image: url(images/person_1.jpg);"></div>
+                        <div class="bio me-md-4 img" style="background-image: url(images/nicolas.jpg);"></div>
                         <div class="desc">
                             <h3>Nicolas Lépinay</h3>
                             <p>Étudiant en informatique, féru d'UI/UX design et curieux de tout.
@@ -274,42 +274,42 @@
                 <div class="sidebar-box">
                     <h3>Articles récents</h3>
                     <div class="block-21 mb-4 d-flex">
-                        <a class="blog-img me-4" style="background-image: url(images/image_1.jpg);"></a>
+                        <a class="blog-img me-4" style="background-image: url(images/rem-em-px.webp);"></a>
                         <div class="text">
-                            <h3 class="heading"><a href="#">Far far away, behind the word mountains</a></h3>
+                            <h3 class="heading"><a href="blog-rem-em-px.html">CSS : rem, em ou pixels ?</a></h3>
                             <div class="meta">
-                                <div><a href="#"><span class="fa fa-calendar"></span> December 24, 2020</a></div>
-                                <div><a href="#"><span class="fa fa-user"></span> Admin</a></div>
-                                <div><a href="#"><span class="fa fa-comment"></span> 19</a></div>
+                                <div><a href="#"><span class="fa fa-calendar"></span> 9 août 2021</a></div>
+                                <div><a href="#"><span class="fa fa-user"></span> Nicolas Lépinay</a></div>
+                                <!-- <div><a href="#"><span class="fa fa-comment"></span> 19</a></div> -->
                             </div>
                         </div>
                     </div>
 
                     <div class="block-21 mb-4 d-flex">
-                        <a class="blog-img me-4" style="background-image: url(images/image_2.jpg);"></a>
+                        <a class="blog-img me-4" style="background-image: url(images/css.jpg);"></a>
                         <div class="text">
-                            <h3 class="heading"><a href="#">Far far away, behind the word mountains</a></h3>
+                            <h3 class="heading"><a href="blog-css-bases.html">Les bases du CSS</a></h3>
                             <div class="meta">
-                                <div><a href="#"><span class="fa fa-calendar"></span> December 24, 2020</a></div>
-                                <div><a href="#"><span class="fa fa-user"></span> Admin</a></div>
-                                <div><a href="#"><span class="fa fa-comment"></span> 19</a></div>
+                                <div><a href="#"><span class="fa fa-calendar"></span> 1er août 2021</a></div>
+                                <div><a href="#"><span class="fa fa-user"></span> Nicolas Lépinay</a></div>
+                                <!-- <div><a href="#"><span class="fa fa-comment"></span> 19</a></div> -->
                             </div>
                         </div>
                     </div>
 
                     <div class="block-21 mb-4 d-flex">
-                        <a class="blog-img me-4" style="background-image: url(images/image_3.jpg);"></a>
+                        <a class="blog-img me-4" style="background-image: url(images/golang.jpg);"></a>
                         <div class="text">
-                            <h3 class="heading"><a href="#">Far far away, behind the word mountains</a></h3>
+                            <h3 class="heading"><a href="blog-go-modules.html">Comment utiliser les modules Go</a></h3>
                             <div class="meta">
-                                <div><a href="#"><span class="fa fa-calendar"></span> December 24, 2020</a></div>
-                                <div><a href="#"><span class="fa fa-user"></span> Admin</a></div>
-                                <div><a href="#"><span class="fa fa-comment"></span> 19</a></div>
+                                <div><a href="#"><span class="fa fa-calendar"></span> 29 juillet 2021</a></div>
+                                <div><a href="#"><span class="fa fa-user"></span> Nicolas Lépinay</a></div>
+                                <!-- <div><a href="#"><span class="fa fa-comment"></span> 19</a></div> -->
                             </div>
                         </div>
                     </div>
-
                 </div>
+
                 <!-- 
                     <div class="sidebar-box">
                         <h3>Tag Cloud</h3>
