--- a/blog.html
+++ b/blog.html
@@ -66,7 +66,7 @@
                 <!-- ARTICLE : Stage - Bachelor 1  -->
                 <div class="col-md-6 col-lg-3 d-flex">
                     <div class="blog-entry justify-content-end" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
-                        <a href="blog-stage-b1.html" class="block-20 img d-flex align-items-end" style="background-image: url('images/image_5.jpg');">
+                        <a href="blog-stage-b1.html" class="block-20 img d-flex align-items-end" style="background-image: url('images/villa_gallici.jpg');">
                         </a>
                         <div class="text">
                             <p class="meta"> <span>13 août 2021</span>
@@ -81,7 +81,7 @@
                 <!-- ARTICLE : Rem, Em, Px  -->
                 <div class="col-md-6 col-lg-3 d-flex">
                     <div class="blog-entry justify-content-end" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
-                        <a href="blog-rem-em-px.html" class="block-20 img d-flex align-items-end" style="background-image: url('images/image_4.jpg');">
+                        <a href="blog-rem-em-px.html" class="block-20 img d-flex align-items-end" style="background-image: url('images/rem-em-px.webp');">
                         </a>
                         <div class="text">
                             <p class="meta"> <span>9 août 2021</span>
@@ -96,7 +96,7 @@
                 <!-- ARTICLE : Ada Lovelace  -->
                 <div class="col-md-6 col-lg-3 d-flex">
                     <div class="blog-entry justify-content-end" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
-                        <a href="blog-ada-lovelace.html" class="block-20 img d-flex align-items-end" style="background-image: url('images/image_3.jpg');">
+                        <a href="blog-ada-lovelace.html" class="block-20 img d-flex align-items-end" style="background-image: url('images/ada.webp');">
                         </a>
                         <div class="text">
                             <p class="meta"> <span>5 août 2021</span>
@@ -111,7 +111,7 @@
                 <!-- ARTICLE : Les bases du CSS  -->
                 <div class="col-md-6 col-lg-3 d-flex">
                     <div class="blog-entry justify-content-end" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
-                        <a href="blog-css-bases.html" class="block-20 img d-flex align-items-end" style="background-image: url('images/image_2.jpg');">
+                        <a href="blog-css-bases.html" class="block-20 img d-flex align-items-end" style="background-image: url('images/css.jpg');">
                         </a>
                         <div class="text">
                             <p class="meta"> <span>1er août 2021</span>
@@ -126,7 +126,7 @@
                 <!-- ARTICLE : Les Go Modules  -->
                 <div class="col-md-6 col-lg-3 d-flex">
                     <div class="blog-entry justify-content-end" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
-                        <a href="blog-go-modules.html" class="block-20 img d-flex align-items-end" style="background-image: url('images/image_1.jpg');">
+                        <a href="blog-go-modules.html" class="block-20 img d-flex align-items-end" style="background-image: url('images/golang.jpg');">
                         </a>
                         <div class="text">
                             <p class="meta"> <span>29 juillet 2021</span>
