Updated email address

--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@
                                         <div class="col-md-5">
                                             <div class="dbox w-100 d-flex align-items-start">
                                                 <div class="text">
-                                                    <p><span>Email :</span> <a href="mailto:nicolaslepinay.contact@gmail.com" title="Envoyer un e-mail">nicolaslepinay.contact@gmail.com</a></p>
+                                                    <p><span>Email :</span> <a href="mailto:nicolaslepinay@outlook.fr" title="Envoyer un e-mail">nicolaslepinay@outlook.fr</a></p>
                                                 </div>
                                             </div>
                                         </div>
