Updated email address

--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@
                             <div class="col-lg-6">
                                 <ul class="about-info mt-4 px-md-0 px-2">
                                     <li class="d-flex"><span>Lieu :</span> <span>Aix-en-Provence, France</span></li>
-                                    <li class="d-flex"><span>Email :</span> <span><a href="mailto:nicolaslepinay.contact@gmail.com" title="Envoyer un e-mail">nicolaslepinay@outlook.fr</a></span></li>
+                                    <li class="d-flex"><span>Email :</span> <span><a href="mailto:nicolaslepinay@outlook.fr" title="Envoyer un e-mail">nicolaslepinay@outlook.fr</a></span></li>
                                     <li class="d-flex"><span>Lien GitHub :</span> <span><a href="https://github.com/nicolas-lepinay" target="_blank"><i class="fa fa-github"></i></a></span></li>
                                 </ul>
                             </div>
