--- a/experience.html
+++ b/experience.html
@@ -108,6 +108,16 @@
                         </div>
                     </div>
 
+                    <div class="resume-wrap d-flex align-item-stretch" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
+                        <div class="w-100">
+                            <div class="icon"><span class="flaticon-work-from-home"></span></div>
+                            <span class="date">2016 - 2018</span>
+                            <h2>Assistant d'enseignement</h2>
+                            <span class="position"><i class="ion-ios-pin me-2"></i>Lycée Cézanne, Aix-en-Provence</span>
+                            <p class="mt-4">Assistant d'une professeure de biologie en situation de handicap.</p>
+                        </div>
+                    </div>
+
                     <!-- <div class="resume-wrap d-flex align-item-stretch" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
                         <div class="w-100">
                             <div class="icon"><span class="flaticon-work-from-home"></span></div>
