--- a/work.html
+++ b/work.html
@@ -70,7 +70,7 @@
                             <h3><a href="https://github.com/nicolas-lepinay/bachelor1-forum_Fairfax" target="_blank">Forum Fairfax</a></h3>
                             <span>Bachelor 1</span>
                             <br>
-                            <span>🥇 Lauréat du 1er prix</span>
+                            <span><a href="https://www.linkedin.com/posts/aix-ynov-campus_forum-ytracker-is-over-f%C3%A9licitations-activity-6811682018653536256-h88R" target="_blank" title="LinkedIn">🥇</a> Lauréat du 1er prix</span>
 
                         </div>
                     </div>
