--- a/work.html
+++ b/work.html
@@ -64,7 +64,7 @@
             <div class="row">
 
                 <div class="col-md-4">
-                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-b1-forum_fairfax2.jpg);">
+                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-b1-forum_fairfax2.webp);">
                         <div class="overlay"></div>
                         <div class="text text-center p-4">
                             <h3><a href="https://github.com/nicolas-lepinay/bachelor1-forum_Fairfax" target="_blank">Forum Fairfax</a></h3>
@@ -77,7 +77,7 @@
                 </div>
 
                 <div class="col-md-4">
-                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-b1-groupie_tracker.jpg);">
+                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-b1-groupie_tracker.webp);">
                         <div class="overlay"></div>
                         <div class="text text-center p-4">
                             <h3><a href="https://github.com/nicolas-lepinay/bachelor1-groupie_tracker" target="_blank">Groupie Tracker</a></h3>
@@ -87,7 +87,7 @@
                 </div>
 
                 <div class="col-md-4">
-                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-b1-clonernews.jpg);">
+                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-b1-clonernews.webp);">
                         <div class="overlay"></div>
                         <div class="text text-center p-4">
                             <h3><a href="https://nicolas-lepinay.github.io/bachelor1-clonernews/" target="_blank">Clonernews</a></h3>
@@ -97,7 +97,7 @@
                 </div>
 
                 <div class="col-md-4">
-                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-b1-superheroes.jpg);">
+                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-b1-superheroes.webp);">
                         <div class="overlay"></div>
                         <div class="text text-center p-4">
                             <h3><a href="https://nicolas-lepinay.github.io/bachelor1-superheroes/" target="_blank">Superheroes Database</a></h3>
@@ -107,7 +107,7 @@
                 </div>
 
                 <div class="col-md-4">
-                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-b1-ascii.jpg);">
+                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-b1-ascii.webp);">
                         <div class="overlay"></div>
                         <div class="text text-center p-4">
                             <h3><a href="https://github.com/nicolas-lepinay/bachelor1-ascii" target="_blank">ASCII Art Generator</a></h3>
