--- a/about.html
+++ b/about.html
@@ -271,7 +271,7 @@
             </div>
     </section>
 
-    <footer class="ftco-footer">
+    {% comment %} <footer class="ftco-footer">
         <div class="container-xl">
             <div class="row">
                 <div class="col-md-12 text-center">
@@ -282,7 +282,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> {% endcomment %}
 
 
     <script src="js/bootstrap.bundle.min.js"></script>
