--- a/blog-go-modules.html
+++ b/blog-go-modules.html
@@ -338,7 +338,7 @@
     </section>
     <!-- .section -->
 
-    <footer class="ftco-footer">
+    {% comment %} <footer class="ftco-footer">
         <div class="container-xl">
             <div class="row">
                 <div class="col-md-12 text-center">
@@ -349,7 +349,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> {% endcomment %}
 
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/tiny-slider.js"></script>
