--- a/blog.html
+++ b/blog.html
@@ -160,7 +160,7 @@
         </div>
     </section>
 
-    <footer class="ftco-footer">
+    {% comment %} <footer class="ftco-footer">
         <div class="container-xl">
             <div class="row">
                 <div class="col-md-12 text-center">
@@ -171,7 +171,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> {% endcomment %}
 
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/tiny-slider.js"></script>
