--- a/services.html
+++ b/services.html
@@ -232,7 +232,7 @@
         </div>
     </section> -->
 
-    <footer class="ftco-footer">
+    {% comment %} <footer class="ftco-footer">
         <div class="container-xl">
             <div class="row">
                 <div class="col-md-12 text-center">
@@ -243,7 +243,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> {% endcomment %}
 
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/tiny-slider.js"></script>
