--- a/about.html
+++ b/about.html
@@ -149,16 +149,34 @@
                 </div>
                 <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
                     <div class="progress-wrap">
-                        <h3>JavaScript</h3>
+                        <h3>ReactJS</h3>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
                             </div>
                         </div>
                     </div>
                 </div>
+                <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
+                    <div class="progress-wrap">
+                        <h3>nodeJS</h3>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
+                    <div class="progress-wrap">
+                        <h3>PHP</h3>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
                     <div class="progress-wrap">
-                        <h3>Go</h3>
+                        <h3>Golang</h3>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
                             </div>
@@ -174,11 +192,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
+                <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
                     <div class="progress-wrap">
-                        <h3>Python</h3>
+                        <h3>C#</h3>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width:75%">
                             </div>
                         </div>
                     </div>
@@ -187,25 +205,52 @@
                     <div class="progress-wrap">
                         <h3>Java</h3>
                         <div class="progress">
-                            <div class="progress-bar color-5" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
+                            <div class="progress-bar color-5" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
+                    <div class="progress-wrap">
+                        <h3>Python</h3>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="800">
                     <div class="progress-wrap">
-                        <h3>PHP</h3>
+                        <h3>SQL</h3>
                         <div class="progress">
-                            <div class="progress-bar color-6" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
+                            <div class="progress-bar color-6" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="900">
                     <div class="progress-wrap">
-                        <h3>C#</h3>
+                        <h3>MongoDB</h3>
                         <div class="progress">
-                            <div class="progress-bar color-6" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
+                            <div class="progress-bar color-6" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
+                    <div class="progress-wrap">
+                        <h3>Linux</h3>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600" style="opacity:0.6">
+                    <div class="progress-wrap">
+                        <h3>Symfony <i>(en cours)</i></h3>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="5" aria-valuemax="100" style="width:5%">
                             </div>
                         </div>
                     </div>
