Added Flincy to portfolio

--- a/work.html
+++ b/work.html
@@ -64,6 +64,16 @@
             <div class="row">
 
                 <div class="col-md-4">
+                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-b2-flincy.webp);">
+                        <div class="overlay"></div>
+                        <div class="text text-center p-4">
+                            <h3><a href="https://github.com/nicolas-lepinay/Flincy" target="_blank">Flincy</a></h3>
+                            <span>Stage professionnel</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
                     <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-b1-forum_fairfax2.webp);">
                         <div class="overlay"></div>
                         <div class="text text-center p-4">
