--- a/about.html
+++ b/about.html
@@ -316,7 +316,8 @@
             </div>
     </section>
 
-    {% comment %} <footer class="ftco-footer">
+    <!-- 
+    <footer class="ftco-footer">
         <div class="container-xl">
             <div class="row">
                 <div class="col-md-12 text-center">
@@ -327,7 +328,8 @@
                 </div>
             </div>
         </div>
-    </footer> {% endcomment %}
+    </footer> 
+    -->
 
 
     <script src="js/bootstrap.bundle.min.js"></script>
