--- a/services.html
+++ b/services.html
@@ -232,7 +232,8 @@
         </div>
     </section> -->
 
-    {% comment %} <footer class="ftco-footer">
+    <!-- 
+    <footer class="ftco-footer">
         <div class="container-xl">
             <div class="row">
                 <div class="col-md-12 text-center">
@@ -243,7 +244,8 @@
                 </div>
             </div>
         </div>
-    </footer> {% endcomment %}
+    </footer> 
+    -->
 
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/tiny-slider.js"></script>
