--- a/blog-css-bases.html
+++ b/blog-css-bases.html
@@ -405,7 +405,8 @@
     </section>
     <!-- .section -->
 
-    {% comment %} <footer class="ftco-footer">
+    <!-- 
+    <footer class="ftco-footer">
         <div class="container-xl">
             <div class="row">
                 <div class="col-md-12 text-center">
@@ -416,7 +417,8 @@
                 </div>
             </div>
         </div>
-    </footer> {% endcomment %}
+    </footer> 
+    -->
 
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/tiny-slider.js"></script>
