--- a/experience.html
+++ b/experience.html
@@ -143,7 +143,8 @@
         </div>
     </section>
 
-    {% comment %} <footer class="ftco-footer">
+    <!-- 
+    <footer class="ftco-footer">
         <div class="container-xl">
             <div class="row">
                 <div class="col-md-12 text-center">
@@ -154,7 +155,8 @@
                 </div>
             </div>
         </div>
-    </footer> {% endcomment %}
+    </footer> 
+    -->
 
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/tiny-slider.js"></script>
