--- a/work.html
+++ b/work.html
@@ -146,7 +146,8 @@
         </div>
     </section>
 
-    {% comment %} <footer class="ftco-footer">
+    <!-- 
+    <footer class="ftco-footer">
         <div class="container-xl">
             <div class="row">
                 <div class="col-md-12 text-center">
@@ -157,7 +158,8 @@
                 </div>
             </div>
         </div>
-    </footer> {% endcomment %}
+    </footer> 
+    -->
 
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/tiny-slider.js"></script>
